<resources>
    <string name="app_name">Project Athena</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_helpinfo">Help Info</string>
    <string name="action_emergencyHistory">Emergency History</string>

    <string name="title_activity_maps">Map</string>
    <string name="service_not_available">Google Play Service is not available</string>
    <string name="invalid_lat_long_used">Invalid Location</string>
    <string name="no_address_found">No Address Found</string>
    <string name="address_found">Add Found</string>
    <string name="no_geocoder_available">No GeoCoder Available</string>
    <string name="no_location_data_provided">No Location Data</string>

    <string name="facebook_app_id">572141746261611</string>
    <string name="title_activity_display_message">Main Activity</string>
    <string name="title_activity_contact_info">ContactInfo</string>

    <string name="title_activity_add_contact">Add Contact</string>
    <string name="title_activity_emergency">Emergency</string>
    <string name="title_activity_help_info">Help Information</string>
    <string name="title_activity_emergency_history">Emergency History</string>
    <string name="title_activity_emergency_track_history">Emergency Track History</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_add_danger_zone">Add Danger Zone</string>
    <string name="title_activity_danger_zone_list">DangerZoneList</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_offline">Offline Mode</string>

    <string name="com_facebook_loginview_log_out_button"></string>
    <string name="com_facebook_loginview_log_in_button"></string>
    <string name="com_facebook_loginview_log_in_button_long"></string>


</resources>